--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nativescript/angular": "^13.0.0",
     "@nativescript/core": "~8.2.0",
     "@nativescript/theme": "~3.0.2",
+    "@nativescript/unit-test-runner": "^3.0.3",
     "nativescript-ui-sidedrawer": "~10.0.2",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.5"
@@ -22,9 +23,17 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
+    "@jsdevtools/coverage-istanbul-loader": "3.0.5",
+    "@nativescript/android": "8.2.2",
     "@nativescript/types": "~8.2.0",
     "@nativescript/webpack": "~5.0.6",
     "@ngtools/webpack": "~13.2.0",
+    "@types/jasmine": "3.10.3",
+    "karma": "6.3.19",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "4.0.1",
+    "karma-nativescript-launcher": "0.4.0",
+    "nyc": "15.1.0",
     "typescript": "~4.5.5"
   }
 }
